Added descriptions to Group Popup windows

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
                     <h3>Young & Social</h3>
                     <p>We have more time on our hands... Maybe</p>
-                    <button class="readmore stretched-link openModal" data-target="Young & Social" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
+                    <button class="readmore stretched-link openModal" data-target="Young and Social" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -195,7 +195,7 @@
                     </div>
                     <h3>Fabulous 50's</h3>
                     <p>We are Fabulous As always</p>
-                    <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
+                    <button class="readmore stretched-link openModal" data-target="Fab 50's" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -205,7 +205,7 @@
                   </div>
                   <h3>Fabulous 60's</h3>
                   <p>Because we finally have the money to do what we want.</p>
-                  <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
+                  <button class="readmore stretched-link openModal" data-target="Fab 60's" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
               </div>
           </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -215,7 +215,7 @@
                   </div>
                   <h3>Single moms</h3>
                   <p>Single and free to do what we enjoy.</p>
-                  <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
+                  <button class="readmore stretched-link openModal" data-target="Single moms" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
               </div>
             </div>
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -225,7 +225,7 @@
                   </div>
                   <h3>Stay at home moms</h3>
                   <p>Cause stay at home doesnt actually mean stay at HOME</p>
-                  <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
+                  <button class="readmore stretched-link openModal" data-target="Stay at home moms" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
               </div>
           </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -235,7 +235,7 @@
                   </div>
                   <h3>Golden Gems</h3>
                   <p>Because when the Inlaws come to visit, it's nice to get them out of my house for a bit.</p>
-                  <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
+                  <button class="readmore stretched-link openModal" data-target="Golden Gems" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
               </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -245,7 +245,7 @@
                     </div>
                     <h3>Hobbies</h3>
                     <p>Almost anything you can imagine</p>
-                    <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
+                    <button class="readmore stretched-link openModal" data-target="Hobbies" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -253,9 +253,9 @@
                     <div class="icon">
                         <i class="fa-solid fa-plane"></i>
                     </div>
-                    <h3>Location Based groups</h3>
-                    <p>Where ever you are there is a group for you, except if you are not around the Dallas area</p>
-                    <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
+                    <h3>Travel Group</h3>
+                    <p>Who you travel with can be more important than your destination.</p>
+                    <button class="readmore stretched-link openModal" data-target="Travel Group" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
 <div id="Pregnant Moms" class="modal">
@@ -263,11 +263,11 @@
       <span class="close">&times;</span>
       <div style="text-align: center;"><h2>Pregnant Moms</h2></div>
     
-      <p>Are you expecting a little one and looking for a supportive community to share this special journey? C3 Pregnant Moms is here to guide and uplift you through every stage of pregnancy. From first-trimester questions to nesting tips, this group offers a warm environment to swap experiences, gain practical advice, and celebrate milestones—no matter how big or small.
-        What’s in Store</p>
-        <p>Resource Sharing: Discuss prenatal care, nutrition, exercise, and more.</p>
-        <p>Encouragement & Advice: Get firsthand tips from fellow moms who understand the joys (and jitters) of pregnancy.</p>
-        <p>Friendly Meetups: Bond over shared experiences through casual gatherings—whether in person or virtual.</p>
+      <p>Are you expecting a little one and looking for a supportive community to share this special journey? C3 Pregnant Moms is here to guide and uplift you through every stage of pregnancy. From first-trimester questions to nesting tips, this group offers a warm environment to swap experiences, gain practical advice, and celebrate milestones—no matter how big or small.</p>
+        <b>What’s in Store</b>
+        <p><b>Resource Sharing:</b> Discuss prenatal care, nutrition, exercise, and more.</p>
+        <p><b>Encouragement & Advice:</b> Get firsthand tips from fellow moms who understand the joys (and jitters) of pregnancy.</p>
+        <p><b>Friendly Meetups:</b> Bond over shared experiences through casual gatherings—whether in person or virtual.</p>
         <p>Join C3 Pregnant Moms and experience the comfort of a supportive circle that grows with you—from bump to baby!</p>
   </div>
 </div>
@@ -291,11 +291,11 @@
   <div class="modal-content">
       <span class="close">&times;</span>
       <div style="text-align: center;"><h2>Young and Social</h2></div>
-      <p>This subgroup is a warm, welcoming space for women who are married and do not have children. C3 Young & Social offers a sense of belonging for those excited to build friendships, share experiences, and create cherished memories—whether you’re focused on your career, travel, personal growth, or simply enjoying quality time as a couple. Connect with others who appreciate marriage without the parenting focus, celebrate milestones, and lift each other up through lighthearted meetups that encourage personal growth and spark new traditions. It’s all about connection, exploration, and the chance to thrive—together!
-        What’s in Store:</p>
-        <p>Shared Experiences: Connect with others who appreciate the joys and day-to-day life of marriage without the parenting focus.</p>
-        <p>Community & Support: A supportive circle for discussing personal goals, celebrating milestones, and lifting each other up.</p>
-        <p>thearted Gatherings: Enjoy meetups tailored to your interests—balanced between fun, personal growth, and creating new traditions together.</p>
+      <p>This subgroup is a warm, welcoming space for women who are married and do not have children. C3 Young & Social offers a sense of belonging for those excited to build friendships, share experiences, and create cherished memories—whether you’re focused on your career, travel, personal growth, or simply enjoying quality time as a couple. Connect with others who appreciate marriage without the parenting focus, celebrate milestones, and lift each other up through lighthearted meetups that encourage personal growth and spark new traditions. It’s all about connection, exploration, and the chance to thrive—together!</p>
+        <b> What’s in Store:</b>
+        <p><b>Shared Experiences:</b> Connect with others who appreciate the joys and day-to-day life of marriage without the parenting focus.</p>
+        <p><b>Community & Support:</b> A supportive circle for discussing personal goals, celebrating milestones, and lifting each other up.</p>
+        <p><b>thearted Gatherings:</b> Enjoy meetups tailored to your interests—balanced between fun, personal growth, and creating new traditions together.</p>
         <p>C3 Young & Social is about connection, exploration, and support. It’s a space where women can bond over shared experiences in a vibrant space to flourish—together!</p>
   </div>
 </div>
@@ -303,6 +303,95 @@
   <div class="modal-content">
       <span class="close">&times;</span>
       <div style="text-align: center;"><h2>Oops, This is still being worked on</h2></div>
+  </div>
+</div>
+<div id="Fab 50's" class="modal">
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <div style="text-align: center;"><h2>Fabulous 50's</h2></div>
+      <p>Calling all vibrant women aged 50 and above! If you’re looking for a space to share experiences, build lasting friendships, and explore new adventures, C3 50s & Fab is the perfect fit. We believe this season of life should be celebrated, and our group is all about fostering meaningful connections in a non-judgmental, supportive environment.</p>
+      <b>What’s in Store</b>
+      <p><b>Indoor & Outdoor Gatherings:</b> Enjoy everything from cozy potlucks and social get-togethers to picnics and parties.</p>
+      <p><b>Meaningful Conversations:</b> Discuss life’s changes, challenges, and joys while gaining fresh perspectives from peers who truly understand.</p>
+      <p><b>Supportive Community:</b> Share insights, offer encouragement, and find companionship in a warm, understanding circle.</p>
+      <p>Join C3 50s & Fab to embrace this chapter of life with confidence, camaraderie, and plenty of laughter—because the best is yet to come!</p>
+  </div>
+</div>
+<div id="Fab 60's" class="modal">
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <div style="text-align: center;"><h2>Fabulous 60's</h2></div>
+      <p>Ready to celebrate life’s next chapter with warmth, wisdom, and a sense of adventure? C3 60s & above is your welcoming circle for women aged 60 and above. Whether you’re seeking new friendships, meaningful conversations, or simply a bit of fun, this group helps you embrace every moment with confidence and joy.</p>
+      <b>What’s in Store</b>
+      <p><b>Indoor & Outdoor Gatherings:</b> Relaxed potlucks, coffee meets, and group outings—there’s always something new to explore.</p>
+      <p><b>Shared Insights:</b> Discuss life’s changes, highlights, and reflections in an open, encouraging setting.</p>
+      <p><b>Supportive Community:</b> Celebrate milestones, exchange advice, and uplift one another every step of the way.</p>
+      <p>Join C3 60s & Fab and discover that each passing year is an invitation to find joy, stay curious, and savor life’s every moment—because there’s always something wonderful around the corner!</p>
+    </div>
+</div>
+<div id="Single moms" class="modal">
+   <div class="modal-content">
+      <span class="close">&times;</span>
+      <div style="text-align: center;"><h2>Single moms</h2></div>
+      <h5>C3 Super Single Moms</h5>
+      <h5>C3 HAPPY SINGLES</h5>
+      <h5>C3 Soul Sisters</h5>
+      <p>These group are a supportive haven for any mom who’s navigating life on her own—whether due to separation, divorce, widowhood, or any other circumstance. C3 Super Single Moms welcomes women at every stage: those just beginning the separation process, those healing from a loss, or those who’ve already embraced single motherhood.</p>
+      <b>What’s in Store</b>
+      <p><b>Shared Experiences & Support:</b> Swap personal stories, discuss challenges, and share advice on thriving as a single parent.</p>
+      <p><b>Practical Resources:</b> Discover helpful tips, references, and guidance that make single motherhood more manageable.</p>
+      <p><b>Fun Meetups:</b> Gather at homes, parks, or other local spots to unwind, socialize, and form meaningful connections.</p>
+      <p>Join C3 Super Single Moms to find friends who truly get your journey, offering support and reminding you that you’re never alone.</p>
+  </div>
+</div>
+<div id="Stay at home moms" class="modal">
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <div style="text-align: center;"><h2>Stay at home moms</h2></div>
+      <p>This group is where full-time homemakers connect, share, and thrive. A caring and uplifting community for mothers dedicating themselves full-time to raising a family, running a household, and juggling countless responsibilities—all without clocking out.</p>
+      <b>What’s in Store</b>
+      <p><b>Festive Meetups:</b> Celebrate holidays and milestones and special occasions in a relaxed, fun atmosphere.</p>
+      <p><b>Chai Breaks:</b> Unwind and connect over a warm cup, sharing stories, tips, and laughter.</p>
+      <p><b>Shared Hobbies & Skills:</b> Discover and explore new hobbies or revisit old favorites—everything from cooking and crafting to fitness or reading</p>
+      <p>By joining C3 Stay-at-Home Moms, you’ll find a sisterhood that recognizes the unique challenges and rewards of this role. Together, we celebrate the power and purpose of homemaking, proving that staying at home is every bit as vital and fulfilling.</p>
+  </div>
+</div>
+</div>
+<div id="Golden Gems" class="modal">
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <div style="text-align: center;"><h2>Golden Gems</h2></div>
+      <p>This group is a heartfelt space for seniors and parents visiting or living in the U.S., where they can connect, share experiences, and form meaningful friendships. The group nurtures those older parents who might feel isolated or solely dependent on their adult children to fill the void. Instead, they discover new bonds and a vibrant community that enriches their lives and fosters a sense of belonging.</p>
+      <p>Through regular meetups and shared celebrations, members create a support system that eases homesickness and helps navigate the challenges of being far from loved ones. Whether reminiscing about cherished memories, engaging in lively conversations, or celebrating cultural traditions, this group uplifts spirits and promotes overall well-being.</p>
+      <b>What’s in Store:</b>
+      <p><b> Social Gatherings:</b> Friendly meetups to share laughter, stories, and connection.</p>
+      <p><b>Cultural Celebrations:</b> Festive events to honor traditions and make new memories together.</p>
+      <p><b>Supportive Community:</b> A welcoming space for shared understanding, encouragement, and joy.</p>
+      <p>In the Golden Gems group no one is alone—friendship and connection make every day brighter.</p>
+  </div>
+</div>
+<div id="Hobbies" class="modal">
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <div style="text-align: center;"><h2>Hobbies</h2></div>
+      <h5>Crafts Club</h5>
+      <h5>Garden Club</h5>
+      <h5>Karaoke</h5>
+      <h5>DANCE WITH C3</h5>
+      <h5>C3 Book Club</h5>
+      <h5>Home Decor</h5>
+      <h5>Beauty & fashion</h5>
+      <h5>C3 Throwball troop</h5>
+      <h5>C3 hikers</h5>
+      <p>These are just a few of hobby groups, There is probably a group in interest</p>
+  </div>
+</div>
+<div id="Travel Group" class="modal">
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <div style="text-align: center;"><h2>Travel Group</h2></div>
+      <p>This vibrant subgroup brings together women who share a passion for exploring new destinations, cultures, and adventures. Whether you’re dreaming of a solo trip, planning a family vacation, or looking for a group getaway with friends, this group is your go-to community for inspiration and practical tips</p>
+      <p>The C3 Travel Group is more than just a space to talk travel—it’s where bucket lists come to life. Here, women connect with like-minded enthusiasts, find their perfect travel buddies, and turn dream destinations into reality. Whether it’s conquering Kilimanjaro, chasing the Northern Lights, wandering through Italy’s charming villages, or exploring the markets of Marrakech, shared planning and local meetups make it easy to bring once-in-a-lifetime experiences to life. No dream is too big, no destination too far—Our C3 Travel Tribe ensures you never have to do it alone. Let’s pack our bags, find our travel sisters, and create memories that will last a lifetime!</p>
   </div>
 </div>
 <!-- CSS Styles -->
