Add new images and update index.html to include them in the layout

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
           </div>
 
           <div class="col-lg-5" data-aos="fade">
-            <p></p>
+          <img src="assets/img/4.png" alt="Image" width="480" height="360">
+          <img src="assets/img/24.png" alt="Image" width="480" height="360">
+          <img src="assets/img/32.png" alt="Image" width="480" height="360">
                 </div>
 
               </div>
@@ -125,8 +127,8 @@
         <div class="row gy-4">
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
-                    <div class="icon">
-                        <i class="fa-solid fa-sun"></i>
+                    <div>
+                      <img src="assets/img/Main group.png" alt="Main Groups" width="280" height="200">
                     </div>
                     <h3>Main Groups</h3>
                     <p>The Central Groups Of C3</p>
@@ -135,8 +137,8 @@
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item  position-relative">
-                  <div class="icon">
-                      <i class="fa-solid fa-plane"></i>
+                  <div>
+                    <img src="assets/img/Location Based groups.png" alt="Main Groups" width="280" height="200">
                   </div>
                   <h3>Location Based Groups</h3>
                   <p>Groups Based of Location, hence the name</p>
@@ -145,8 +147,8 @@
           </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
-                    <div class="icon">
-                        <i class="fa-solid fa-dumbbell"></i>
+                    <div>
+                      <img src="assets/img/Fitness.png" alt="Main Groups" width="280" height="200">
                     </div>
                     <h3>Health and Fitness Groups</h3>
                     <p>Fitness is more fun when you have people to do it with</p>
@@ -155,8 +157,8 @@
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
-                    <div class="icon">
-                        <i class="fa-solid fa-child"></i>
+                    <div>
+                      <img src="assets/img/Moms and Kids.png" alt="Main Groups" width="280" height="200">
                     </div>
                     <h3>Moms and Kids Groups</h3>
                     <p>Why, Why, Why, Why, Because we said so </p>
@@ -165,8 +167,8 @@
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item  position-relative">
-                  <div class="icon">
-                      <i class="fa-solid fas fa-female"></i>
+                  <div>
+                    <img src="assets/img/Young Ladies.png" alt="Main Groups" width="280" height="200">
                   </div>
                   <h3>Young Ladies</h3>
                   <p>For those that want to be independent</p>
@@ -175,8 +177,8 @@
           </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
-                    <div class="icon">
-                        <i class="fa-solid fa-smile-beam"></i>
+                    <div>
+                      <img src="assets/img/hobby.png" alt="Main Groups" width="280" height="200">
                     </div>
                     <h3>Interest & Hobby Groups</h3>
                     <p>For things that you are Interested in, as the name implies</p>
@@ -185,10 +187,8 @@
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
-                    <div class="icon">
-                      <span class="fa-layers fa-fw">
-                        <i class="fas fa-star"></i>
-                      </span>
+                    <div>
+                      <img src="assets/img/Support.png" alt="Main Groups" width="280" height="200">
                     </div>
                     <h3>Support Groups</h3>
                     <p>We all need help sometimes</p>
@@ -197,8 +197,8 @@
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item  position-relative">
-                  <div class="icon">
-                      <i class="fas fa-money-bill-wave"></i>
+                  <div>
+                    <img src="assets/img/Career.png" alt="Main Groups" width="280" height="200">
                   </div>
                   <h3>Career/Professional Groups</h3>
                   <p>For a Jumpstart/Redo in you Career life</p>
@@ -779,6 +779,7 @@
     <div id="div1" class="hidden">
       <h2>Main Groups</h2>
       <p>These dynamic main groups are built on the foundation of fun, friendship and shared values. With 10 specialized groups, C3 ensures that every member finds a supportive space to connect, grow and thrive. Through engaging events, meaningful conversations, and one-on-one meetups, we foster a strong sense of belonging, empowerment, and cultural connection, making every interaction a truly enriching experience</p>
+        <img src="assets/img/19.png" alt="Image" width="480" height="360" style="position:absolute; left:800px; top:200px;">
         <p>C3 GROUP 1</p>
         <p>C3 GROUP 2</p>
         <p>C3 GROUP 3</p>
@@ -811,6 +812,7 @@
     </div>
     <div id="div3" class="hidden">
       <h2>Health & Fitness groups</h2>
+      <img src="assets/img/7.png" alt="Image" width="480" height="360" style="position:absolute; left:800px; top:200px;">
       <p>If fitness is your passion, C3 Fitness is your squad! This group brings together individuals who want to make staying active a fun, social experience—whether it's hiking, dancing at Zumba, or enjoying a post-workout coffee.</p>
       <h3>What’s in Store</h3>
       <ul>
@@ -830,6 +832,7 @@
     </div>
     <div id="div4" class="hidden">
       <h2>Moms & Kids Groups</h2>
+      <img src="assets/img/33.png" alt="Image" width="480" height="360" style="position:absolute; left:800px; top:200px;">
       <p><button onclick="showDivs(['div9'])">C3 INFANT MOMS</button></p>
       <p><button onclick="showDivs(['div10'])">C3 Kids 3-8</button></p>
       <p><button onclick="showDivs(['div11'])">C3 ELEMENTARY Girls</button></p>
