--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
           </div>
 
           <div class="col-lg-5 hide-on-mobile" data-aos="fade">
-          <img src="assets/img/4.png" alt="Image" width="480" height="360" loading="lazy">
-          <img src="assets/img/24.png" alt="Image" width="480" height="360" loading="lazy">
-          <img src="assets/img/32.png" alt="Image" width="480" height="360" loading="lazy">
+          <img src="assets/img/4.png" alt="Image" loading="lazy">
+          <img src="assets/img/24.png" alt="Image" loading="lazy">
+          <img src="assets/img/32.png" alt="Image" loading="lazy">
           </div>
 
               </div>
@@ -136,7 +136,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div>
-                      <img src="assets/img/Main group.png" alt="Main Groups" width="280" height="200" loading="lazy">
+                      <img src="assets/img/Main group.png" alt="Main Groups" loading="lazy">
                     </div>
                     <h3>Main Groups</h3>
                     <p>The Central Groups Of C3</p>
@@ -146,7 +146,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item  position-relative">
                   <div>
-                    <img src="assets/img/Location Based groups.png" alt="Main Groups" width="280" height="200" loading="lazy">
+                    <img src="assets/img/Location Based groups.png" alt="Main Groups"loading="lazy">
                   </div>
                   <h3>Location Based Groups</h3>
                   <p>Groups Based of Location, hence the name</p>
@@ -156,7 +156,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div>
-                      <img src="assets/img/Fitness.png" alt="Main Groups" width="280" height="200" loading="lazy">
+                      <img src="assets/img/Fitness.png" alt="Main Groups" loading="lazy">
                     </div>
                     <h3>Health and Fitness Groups</h3>
                     <p>Fitness is more fun when you have people to do it with</p>
@@ -166,7 +166,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div>
-                      <img src="assets/img/Moms and Kids.png" alt="Main Groups" width="280" height="200" loading="lazy">
+                      <img src="assets/img/Moms and Kids.png" alt="Main Groups" loading="lazy">
                     </div>
                     <h3>Moms and Kids Groups</h3>
                     <p>Why, Why, Why, Why, Because we said so </p>
@@ -176,7 +176,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item  position-relative">
                   <div>
-                    <img src="assets/img/Young Ladies.png" alt="Main Groups" width="280" height="200" loading="lazy">
+                    <img src="assets/img/Young Ladies.png" alt="Main Groups" loading="lazy">
                   </div>
                   <h3>Young Ladies</h3>
                   <p>For those that want to be independent</p>
@@ -186,7 +186,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div>
-                      <img src="assets/img/hobby.png" alt="Main Groups" width="280" height="200" loading="lazy">
+                      <img src="assets/img/hobby.png" alt="Main Groups" loading="lazy">
                     </div>
                     <h3>Interest & Hobby Groups</h3>
                     <p>For things that you are Interested in, as the name implies</p>
@@ -196,7 +196,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div>
-                      <img src="assets/img/Support.png" alt="Main Groups" width="280" height="200" loading="lazy">
+                      <img src="assets/img/Support.png" alt="Main Groups" loading="lazy">
                     </div>
                     <h3>Support Groups</h3>
                     <p>We all need help sometimes</p>
@@ -206,7 +206,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item  position-relative">
                   <div>
-                    <img src="assets/img/Career.png" alt="Main Groups" width="280" height="200" loading="lazy">
+                    <img src="assets/img/Career.png" alt="Main Groups" loading="lazy">
                   </div>
                   <h3>Career/Professional Groups</h3>
                   <p>For a Jumpstart/Redo in you Career life</p>
@@ -225,7 +225,6 @@
     <div id="div1" class="hidden">
       <h2>Main Groups</h2>
       <p>These dynamic main groups are built on the foundation of fun, friendship and shared values. With 10 specialized groups, C3 ensures that every member finds a supportive space to connect, grow and thrive. Through engaging events, meaningful conversations, and one-on-one meetups, we foster a strong sense of belonging, empowerment, and cultural connection, making every interaction a truly enriching experience</p>
-        <img src="assets/img/19.png" alt="Image" width="480" height="360" style="position:absolute; left:800px; top:200px;" loading="lazy">
         <p>C3 GROUP 1</p>
         <p>C3 GROUP 2</p>
         <p>C3 GROUP 3</p>
@@ -278,7 +277,6 @@
     </div>
     <div id="div4" class="hidden">
       <h2>Moms & Kids Groups</h2>
-      <img src="assets/img/33.png" alt="Image" width="480" height="360" style="position:absolute; left:800px; top:200px;" loading="lazy">
       <p><button onclick="showDivs(['div9'])">C3 INFANT MOMS</button></p>
       <p><button onclick="showDivs(['div10'])">C3 Kids 3-8</button></p>
       <p><button onclick="showDivs(['div11'])">C3 ELEMENTARY Girls</button></p>
