Add C3 logo image and update welcome section

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
       <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 text-center">
-                <h2 data-aos="fade-down">Welcome to <span>C3</span></h2>
-                <h3 data-aos="fade-down">North Dallas</h3>
+                <img src="assets/img/c3-logo.png" alt="Image" loading="lazy">
+                <h2 data-aos="fade-down"> Welcome to C3</h2>
                 <p data-aos="fade-up">Chai and Chit Chat started in the wake of the pandemic. After months of being home alone, a group decided to get together for chai at a local restaurant. What came out of that was a desire to start a community where South Asian ladies help and support one another as they try to navigate life.</p>
-                <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">About us</a>
+                <a href="#get-started" class="btn-get-started">About us</a>
             </div>
         </div>
       </div>
