Update C3 logo and change heading style to h3

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     }
 }
 </style>
+<style>
+  h3 {
+    color: rgb(255, 255, 255); /* Change this to your desired color */
+  }
+</style>
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -56,7 +61,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-6 text-center">
                 <img src="assets/img/c3-logo.png" alt="Image" loading="lazy">
-                <h2 data-aos="fade-down"> Welcome to C3</h2>
+                <h3 data-aos="fade-down"> Welcome to C3</h3>
                 <p data-aos="fade-up">Chai and Chit Chat started in the wake of the pandemic. After months of being home alone, a group decided to get together for chai at a local restaurant. What came out of that was a desire to start a community where South Asian ladies help and support one another as they try to navigate life.</p>
                 <a href="#get-started" class="btn-get-started">About us</a>
             </div>
