--- a/index.html
+++ b/index.html
@@ -826,6 +826,7 @@
               </p> -->
               <div class="social-links d-flex mt-3">
                 <a href="https://www.facebook.com/groups/310194024089084" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/c3_dallas/#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
           </div><!-- End footer info column-->
